--- a/app/assets/css/card.css
+++ b/app/assets/css/card.css
@@ -5,6 +5,10 @@
   -webkit-box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
 }
+.card_title {
+  font-size: 22px;
+  margin-bottom: 8px;
+}
 .card_heart {
   display: -webkit-box;
   display: -ms-flexbox;
