--- a/app/assets/css/application.css
+++ b/app/assets/css/application.css
@@ -151,17 +151,22 @@
 }
 .article_detail {
   padding-top: 10px;
-  cursor: pointer;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   font-size: 12px;
+  position: relative;
 }
 .article_detail img {
+  cursor: pointer;
   width: 32px;
   height: 32px;
   border-radius: 100%;
   margin-right: 16px;
+}
+.article_detail_actions {
+  position: absolute;
+  right: 0px;
 }
 .article_content {
   padding: 24px 0 32px;
