--- a/app/assets/css/header.css
+++ b/app/assets/css/header.css
@@ -9,6 +9,18 @@
   padding: 16px 16px;
   font-weight: bold;
 }
+.header_logos {
+  min-width: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.header_logos img {
+  cursor: pointer;
+  width: 16px;
+  height: 16px;
+  margin: 12px 8px 0;
+}
 .header_pageTitle {
   color: white;
   line-height: 40px;
