--- a/app/assets/css/application.css
+++ b/app/assets/css/application.css
@@ -130,8 +130,14 @@
           box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   position: relative;
 }
+.article h2 {
+  font-size: 16px;
+}
 .article_title {
   font-size: 22px;
+}
+.article_comment {
+  padding-top: 12px;
 }
 .article_detail {
   padding-top: 10px;
@@ -171,6 +177,16 @@
   width: 100%;
   text-align: center;
   color: white;
+  padding: 16px 0;
+  font-weight: bold;
+}
+
+.btn-secondary {
+  background-color: white;
+  border: solid 1px #8AC542;
+  width: 100%;
+  text-align: center;
+  color: #8AC542;
   padding: 16px 0;
   font-weight: bold;
 }
