--- a/app/assets/css/article.css
+++ b/app/assets/css/article.css
@@ -6,8 +6,14 @@
           box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   position: relative;
 }
+.article h2 {
+  font-size: 16px;
+}
 .article_title {
   font-size: 22px;
+}
+.article_comment {
+  padding-top: 12px;
 }
 .article_detail {
   padding-top: 10px;
