--- a/app/assets/css/application.css
+++ b/app/assets/css/application.css
@@ -191,7 +191,7 @@
   font-weight: bold;
 }
 
-input.text {
+input.text, select.text {
   width: 100%;
   margin: 8px 0px;
   padding: 16px 24px;
@@ -295,6 +295,69 @@ textarea {
 
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+.profilePage {
+  margin-top: 24px;
+}
+.profilePage_user {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 32px;
+}
+.profilePage_user_image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.profilePage_user_image img {
+  width: 56px;
+  height: 56px;
+}
+.profilePage_user_basicInfo {
+  margin-left: 16px;
+}
+.profilePage_user_actionButton {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 12px;
+  border-radius: 4px;
+  border: 1px solid #8AC542;
+  font-weight: bold;
+  padding: 0px 8px;
+}
+.profilePage_user_actionButton a {
+  color: #8AC542;
+}
+.profilePage_user_name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 8px;
+}
+.profilePage_user_displayName {
+  font-size: 18px;
+  font-weight: bold;
+  margin-right: 8px;
+}
+.profilePage_user_introduction {
+  font-size: 12px;
 }
 
 html {
